Landing Page skroz gotov

--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -21,11 +21,16 @@
 h1 {
   /* font-size: 2.75rem; */
   font-size: clamp(2rem, 10vw, 2.75rem);
+  margin-bottom: 4rem;
 }
 
 h2 {
   margin-bottom: 4rem;
   font-size: clamp(2rem, 8vw, 2.5rem);
+}
+
+h3 {
+  margin-bottom: 4rem;
 }
  
 p {
@@ -34,9 +39,9 @@ p {
 }
 
 body {
-  padding-top: 79.19;
+  padding-top: 96px;
   margin: 0;
-  color: #e6ddf9;
+  /* color: #e6ddf9; */
 }
 
 
@@ -45,8 +50,8 @@ img {
   width: 100%;
 }
 
-.mainContainer {
-  max-width: 1300px;
+.container {
+  max-width: 1400px;
   margin-inline: auto;
   padding-inline: 2rem;
 }
@@ -72,11 +77,30 @@ img {
   background-color: #8a3a06;
 }
 
+.secondaryButton {
+  background-color: #efded3;
+  color: #f57624;
+  padding: 1rem 1.75rem;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+  text-transform: uppercase;
+}
+
+.secondaryButton:hover {
+  background-color: #eee2db;
+}
+
+.secondaryButton:active {
+  background-color: #f0e5df;
+}
 
 .link {
   background-color: none;
   /* color: #efded3; */
-  color: white;
+  color: black;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
 }
