--- a/MajstorHUB-Front/src/components/LandingPageComponents/MainBlock.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/MainBlock.module.css
@@ -1,21 +1,32 @@
 .divContainer {
-    background-image: radial-gradient(ellipse at top left, #f48f4e, #8a3a06);
+    /* background-image: radial-gradient(ellipse at top left, #f48f4e, #8a3a06); */
     /* background-color: #8a3a06; */
-    height: 85vh;
+    margin-top: 96px;
+    /* min-height: 80vh; */
+    display: grid;
+    align-content: center;
+    grid-template-columns: 1fr 1fr;
 }
 
-.flexContainer {
+.divContainer > div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
 }
 
-/* .flexContainer h1 {
-    font-size: 2.75rem;
-    font-weight: 800;
-} */
-
-.flexContainer h3 {
+.divContainer h3 {
     font-weight: 300;
+    margin-bottom: 2rem !important;
+}
+
+.divContainer h1 {
+    margin-bottom: 2rem !important;
+}
+
+@media (width < 800px) {
+    .divContainer {
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
+    }
 }
