--- a/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
@@ -1,8 +1,10 @@
 header {
     width: 100%;
-    background-color: #0c1626;
+    /* background-color: #0c1626; */
+    background-color: white;
     position: fixed;
     top: 0;
+    z-index: 999;
 }
 
 nav {
@@ -12,7 +14,6 @@ nav {
     /* border: 5px solid red;  */
     padding: 0.3rem 2rem;
     font-weight: bold;
-    color: white;
 }
 
 .dropDown {
@@ -21,6 +22,8 @@ nav {
 
 .logo {
     font-size: 1.5em;
+    color: #f57624;
+    font-weight: 900;
 }
 
 span {
@@ -34,15 +37,20 @@ span {
     gap: 2rem;
 }
 
-@media (width <= 800px) {
+@media (width <= 840px) {
     span {
         display: none;
     }
+
 }
 
 @media (width <= 600px) {
     .optionsContainer p {
         display: none;
+    }
+
+    .loginButton {
+        display: none !important;
     }
     /* nav {
         /* background-color: white; */
