Dodata forma za registraciju klijenta
Planiram da menjam logiku ove komponente i treba da se radi provera za email i jmbg

--- a/MajstorHUB-Front/src/components/LandingPageComponents/MainBlock.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/MainBlock.module.css
@@ -15,6 +15,11 @@
     height: 100%;
 }
 
+.divContainer p {
+    font-size: 1.25rem;
+    margin-bottom: 3rem;
+}
+
 .divContainer h3 {
     font-weight: 300;
     margin-bottom: 2rem !important;
