--- a/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
@@ -12,7 +12,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     /* border: 5px solid red;  */
-    padding: 0.3rem 2rem;
+    padding: 0.85rem 2rem;
     font-weight: bold;
 }
 
@@ -24,6 +24,7 @@ nav {
     font-size: 1.5em;
     color: #f57624;
     font-weight: 900;
+    text-decoration: none;
 }
 
 span {
@@ -38,7 +39,7 @@ span {
 }
 
 @media (width <= 840px) {
-    span {
+    header span {
         display: none;
     }
 
