--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -67,7 +67,8 @@ img {
   color: white;
   padding: 1rem 1.75rem;
   border: none;
-  border-radius: 5px;
+  /* border-radius: 10px; */
+  border-radius: 100px;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.1s ease-in-out;
@@ -93,7 +94,8 @@ img {
   color: #f57624;
   padding: 1rem 1.75rem;
   border: none;
-  border-radius: 5px;
+  /* border-radius: 10px; */
+  border-radius: 100px;
   font-weight: bold;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
