Dodata komplet logika za registrovanje na frontu
Sve radi, dodati dto na back za registrovanje i response design i slanje zahteva serveru i obrada greskaka za fetch f-ju i success i error message za fetch serem ti se i u front i u react i u graficki dizajn

--- a/MajstorHUB-Front/src/components/AuthComponents/RegisterComponents/RegisterForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthComponents/RegisterComponents/RegisterForm.module.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     align-content: center;
-    height: calc(100vh - 220px);
-    margin-top: 96px;
+    /* height: calc(100vh - 220px);
+    margin-top: 96px; */
 }
 
 hr {
@@ -31,7 +31,7 @@ hr {
 
 .form {
   padding: 1rem;
-  min-width: 40rem;
+  width: 40rem;
   /* border: 1px solid black;
   border-radius: 10px; */
 }
@@ -39,6 +39,7 @@ hr {
 .form h3 {
     margin-bottom: 1.75rem;
     text-align: center;
+    font-family: Caveat, Roboto, Inter, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .form label {
@@ -90,4 +91,10 @@ hr {
 
 .errorCheckBox {
   border-color: #e5212c !important;
+}
+
+@media (width < 680px) {
+  .form {
+    width: none !important;
+  }
 }
