--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -323,3 +323,67 @@ img {
   background-color: black;
   display: block;
 }
+
+/* Info, warrning, success, error boxovi */
+.infoBox,
+.warrningBox {
+  border: 2px solid transparent;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.infoBox button,
+.warrningBox button {
+  padding: 1rem;
+  margin-right: 1rem;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.1s ease-in-out;
+  text-decoration: none;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.infoBox > svg,
+.warrningBox > svg  {
+  margin-top: 1rem;
+}
+
+.infoBox > div > p:first-child,
+.warrningBox > div > p:first-child {
+  font-weight: bold;
+}
+
+.infoBox {
+  background-color: #dde6f9;
+  color: #03235f;
+  border-inline-color: #1d60eb;
+}
+
+.infoBox > svg {
+  color: #1d60eb;
+}
+
+.infoBox button {
+  background-color: #1d60eb;
+  color: #dde6f9;
+}
+
+.infoBox button:hover {
+  background-color: #0e4ac6;
+}
+
+.infoBox button:active {
+  background-color: #093893;
+}
+
+.warrningBox {
+  background-color: #f0efd2;
+  color: #beb706;
+  border-inline-color: #beb706;
+}
