Dodat api layer
U readMe fajlu imas objasnjenje za sve ako te zanima sto je to tako

--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -341,6 +341,7 @@ img {
 .warrningBox button {
   padding: 1rem;
   margin-right: 1rem;
+  margin-top: 1rem;
   border: none;
   border-radius: 10px;
   font-weight: bold;
