--- a/MajstorHUB-Front/src/components/AuthComponents/LoginComponents/LoginEmailForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthComponents/LoginComponents/LoginEmailForm.module.css
@@ -95,3 +95,10 @@
   font-weight: bold;
   margin-top: 2rem;
 }
+
+@media (width < 600px) {
+  .form {
+    width: auto;
+    padding: 1rem 3rem;
+  }
+}
