Jedan user je sada automatski logovan pri startovanju
Radi lakseg testiranja jer neke rute ce biti zasticene ( zahtevaju usera da bude logovan ) pri svakom save-u u kodu se react app restartuje i korisnik se izloguje.

--- a/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
@@ -1,7 +1,7 @@
 header {
     width: 100%;
     /* background-color: #0c1626; */
-
+    background-color: white;
     position: fixed;
     top: 0;
     z-index: 999;
@@ -65,5 +65,8 @@ span {
 
     .register {
         display: block;
+    }
+    .dashboard {
+        display: none;
     }
 }
