--- a/MajstorHUB-Front/src/components/ErrorBoundary/SuccErr.module.css
+++ b/MajstorHUB-Front/src/components/ErrorBoundary/SuccErr.module.css
@@ -25,6 +25,16 @@
     padding: 5rem;
 }
 
+.errorButton {
+    background-color: #8d0810;
+    color: #f6dcdd;
+    padding: 1rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 100px;
+    font-weight: bold;
+}
+
 .link {
     color: #0dd75f;
     transition: all 0.1s ease-in-out;
