--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthNavBar.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthNavBar.module.css
@@ -48,10 +48,16 @@ span {
     display: flex;
     align-items: center;
     gap: 2rem;
+    cursor: pointer;
 }
 
 .iconContainer {
     position: relative;
+}
+
+.iconContainer > img {
+    border-radius: 50%;
+    width: 2rem;
 }
 
 @media (width <= 900px) {
