--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/UserMenu.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/UserMenu.module.css
@@ -8,6 +8,7 @@
     width: 15rem;
     border-radius: 10px;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.158);
+    background-color: white;
 }
 
 .userInfo {
