--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AsideComponents/UserInfoAside.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AsideComponents/UserInfoAside.module.css
@@ -1,12 +1,17 @@
+@import '../../../vars.css';
+
 .aside {
     background-color: #faf4f0;
     padding: 1.5rem 1rem;
+    border-radius: 10px;
 }
 
 .firstSection {
     display: flex;
     align-items: center;
     column-gap: 1rem;
+    color: black;
+    text-decoration: none;
 }
 
 .firstSection img {
@@ -16,6 +21,11 @@
 
 .firstSection > div > p {
     margin: 0;
+    transition: color 0.15s ease-in-out;
+}
+
+.firstSection:hover > div > p:first-child {
+    color: var(--color-main-500);
 }
 
 .firstSection > div > p:first-child {
