--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthSidebar.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthSidebar.module.css
@@ -7,6 +7,12 @@
     cursor: pointer;
 }
 
+.link {
+    text-decoration: none;
+    margin: 0;
+    color: black;
+}
+
 .userInfo:hover .imePrezime {
     color: #f57624;
 }
@@ -17,9 +23,10 @@
     align-items: center;
 }
 
-.info > div >  p {
+.info > div > p {
     margin: 0;
 }
+
 
 .arrow {
     transition: all 0.2s ease-in-out;
