Stranica za prikaz user-a gotova

--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/UserProfile.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/UserProfile.module.css
@@ -3,3 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (width <= 600px) {
+    .main > div {
+        padding-inline: 0 !important;
+    }
+}
