--- a/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
@@ -16,7 +16,8 @@ header {
     justify-content: space-between;
     align-items: center;
     /* border: 5px solid red;  */
-    padding: 0.85rem 2rem;
+    padding-top: 0.85rem;
+    padding-bottom: 0.85rem;
     font-weight: bold;
     height: 77px;
     background-color: white;
