--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthNavBar.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthNavBar.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     /* background-color: #0c1626; */
     background-color: white;
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 998;
 }
@@ -16,7 +16,8 @@
     justify-content: space-between;
     align-items: center;
     /* border: 5px solid red;  */
-    padding: 0.85rem 2rem;
+    padding-top: 0.85rem;
+    padding-bottom: 0.85rem;
     font-weight: bold;
     height: 77px;
     background-color: white;
