--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/ProfileData.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/ProfileData.module.css
@@ -2,11 +2,29 @@
 
 .basicInfo {
     border: 1px solid var(--color-neutral-200);
+    border-bottom: none;
     /* border-radius: 10px; */
     display: flex;
     column-gap: 1rem;
     padding: 2rem;
     position: relative;
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+    flex-wrap: wrap;
+}
+
+.settings {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+}
+
+.sectionContainer {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    border: 1px solid var(--color-neutral-200);
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 
 .basicInfo img {
@@ -36,10 +54,14 @@
     align-items: center;
 }
 
+.iconContainer {
+    margin-bottom: 0;
+}
+
 .copyProfileContainer {
     position: absolute;
     right: 2rem;
-    top: 2rem;
+    bottom: 2rem;
 }
 
 .copyProfile {
@@ -68,4 +90,130 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
+}
+
+.userSpecificSec,
+.opisSec,
+.skillsSec {
+    /* border-radius: 10px; */
+    padding: 2rem;
+}
+
+.userSpecificSec {
+    border-right: 1px solid var(--color-neutral-200);
+}
+
+.userSpecificSec svg {
+    color: var(--color-main-500);
+}
+
+.userSpecificSec > div:first-child > h4 {
+    margin-top: 0;
+}
+
+.heading {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.bold {
+    font-weight: bold;
+    display: inline-block;
+}
+
+.textWithInfo {
+    display: flex;
+    gap: 0.2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.iconInline {
+    margin-left: 0.2rem;
+    color: var(--color-main-500);
+    cursor: pointer;
+}
+
+.opisSec {
+    border-bottom: 1px solid var(--color-neutral-200);
+}
+
+.opisHeading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.opisHeading > div {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.opisHeading > h3 {
+    margin: 0;
+}
+
+.vestine {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+}
+
+.skillsSec > div > h3 {
+    margin: 0;
+}
+
+.skillsSec > div {
+    margin-bottom: 3rem;
+}
+
+.vestina {
+    background-color: var(--color-main-100);
+    color: var(--color-main-700);
+    padding: 0.65rem;
+    border-radius: 100px;
+}
+
+@media (width <= 1200px) {
+
+    .imePrezime {
+        flex-grow: 1;
+    }
+    .imePrezime p {
+        line-height: 2rem;
+    }
+    .sectionContainer {
+        display: block;
+    }
+
+    .userSpecificSec {
+        border-right: none;
+        border-bottom: 1px solid var(--color-neutral-200);
+    }
+
+    .settings {
+        position: static;
+        display: none;
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .profileImage {
+        margin-bottom: 1rem;
+    }
+}
+
+@media (width <= 600px) {
+    .basicInfo {
+        border-radius: 0;
+    }
+
+    .sectionContainer {
+        border-radius: 0;
+    }
 }
