Editovanje korisniks gotov uskoro, refaktor potreban
Refaktorisnje logike oko editovanje korisnika je potrebno, pokusao sam dinamicki da napravim logiku i radi ali posto neke forme se dosta rezlikuju od ostalih one su hardkodirane i zbog toga je kod necitljiv i nerazuman

--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthNavBar.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthNavBar.module.css
@@ -2,9 +2,9 @@
     width: 100%;
     /* background-color: #0c1626; */
     background-color: white;
-    position: absolute;
+    position: fixed;
     top: 0;
-    z-index: 998;
+    z-index: 3;
 }
 
 .register {
