Update korisnika na frontu radi
Ostaje da se samo posalje zahtev serveru

--- a/MajstorHUB-Front/src/components/Theme/DropDown/DropDownSlider.module.css
+++ b/MajstorHUB-Front/src/components/Theme/DropDown/DropDownSlider.module.css
@@ -1,4 +1,4 @@
-@import '../../vars.css';
+@import '../../../vars.css';
 
 .main  {
     /* background-color: var(--color-blue-200); */
@@ -41,8 +41,4 @@
     cursor: default;
     padding-inline: 1rem;
     margin-top: 1rem;
-}
-
-.item:first-child {
-
 }
