--- a/MajstorHUB-Front/src/components/Theme/Buttons/EditButton.module.css
+++ b/MajstorHUB-Front/src/components/Theme/Buttons/EditButton.module.css
@@ -13,6 +13,7 @@
     margin: 0;
     width: 2rem;
     height: 2rem;
+    transition: all 0.1s ease-in-out;
 }
 
 .btn:hover {
@@ -20,4 +21,5 @@
 }
 .btn:active {
     background-color: var(--color-main-50);
+    transform: scale(.9);
 }
