--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lugrasimo&display=swap');
+@import '/src/vars.css';
 
 * {
   box-sizing: border-box;
@@ -242,6 +243,28 @@ img {
 
 .secondLink:active {
   color: #8a3a06;
+}
+
+.linkLight {
+  background-color: transparent;
+  font-size: inherit;
+  font-family: inherit;
+  /* color: #efded3; */
+  color: var(--color-neutral-100);
+  cursor: pointer;
+  transition: color 0.1s ease-in-out;
+  font-weight: 400;
+  text-decoration: none;
+  /* margin: auto; */
+  border: none;
+}
+
+.linkLight:hover {
+  color: #f57624;
+}
+
+.linkLight:active {
+  color: #ca560c;
 }
 
 .blockMargins {
