Update korisnika skroz gotov

--- a/MajstorHUB-Front/src/components/Theme/Boxes/Boxes.module.css
+++ b/MajstorHUB-Front/src/components/Theme/Boxes/Boxes.module.css
@@ -2,7 +2,9 @@
 
 /* Info, warrning, success, error boxovi */
 .infoBox,
-.warrningBox {
+.warrningBox,
+.errorBox,
+.succBox {
   border: 2px solid transparent;
   border-radius: 10px;
   padding: 0.5rem 1rem;
@@ -12,7 +14,9 @@
 }
 
 .infoBox button,
-.warrningBox button {
+.warrningBox button,
+.errorBox button,
+.succBox button {
   padding: 1rem;
   margin-right: 1rem;
   margin-top: 1rem;
@@ -27,12 +31,16 @@
 }
 
 .infoBox > svg,
-.warrningBox > svg  {
+.warrningBox > svg,
+.errorBox > svg,
+.succBox > svg {
   margin-top: 1rem;
 }
 
 .infoBox > div > p:first-child,
-.warrningBox > div > p:first-child {
+.warrningBox > div > p:first-child,
+.errorBox > div > p:first-child,
+.succBox > div > p:first-child {
   font-weight: bold;
 }
 
@@ -59,8 +67,20 @@
   background-color: #093893;
 }
 
+.succBox {
+  background-color: var(--color-green-100);
+  color: var(--color-green-600);
+  border-inline-color: var(--color-green-600);
+}
+
 .warrningBox {
   background-color: #f0efd2;
   color: #beb706;
   border-inline-color: #beb706;
+}
+
+.errorBox {
+  background-color: var(--color-red-100);
+  color: var(--color-red-500);
+  border-inline-color: var(--color-red-500);
 }
