--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/ProfileData.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/ProfileData.module.css
@@ -1,5 +1,12 @@
 @import '../../../vars.css';
 
+.saveContainer {
+    display: flex;
+    column-gap: 1rem;
+    flex-direction: row-reverse;
+    margin-top: 3rem;
+}
+
 .basicInfo {
     border: 1px solid var(--color-neutral-200);
     border-bottom: none;
@@ -15,6 +22,7 @@
 
 .divOpis {
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .settings {
@@ -88,6 +96,7 @@
 
 .copyProfile:active {
     background-color: var(--color-main-50);
+    transform: scale(.9);
 }
 
 .containerWithButton {
