--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/UserProfile.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/UserProfile.module.css
@@ -1,7 +1,13 @@
+@import '../../../vars.css';
+
 .center {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    border: 1px solid var(--color-neutral-200);
+    border-radius: 1rem;
+    height: calc(100vh - 77px);
 }
 
 @media (width <= 600px) {
