--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/EditUserForms/EditUserForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/EditUserForms/EditUserForm.module.css
@@ -16,7 +16,7 @@
 }
 
 .form {
-  padding: 2rem 2rem;
+  padding: 1.5rem 2rem;
   width: 46rem;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .header {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -159,7 +159,7 @@
 }
 
 .btnContainer {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     display: flex;
     gap: 1rem;
     flex-direction: row-reverse;
@@ -237,6 +237,11 @@
   border: none;
   background-color: transparent;
   border: none;
+}
+
+.scroll {
+  overflow: scroll;
+  height: 400px;
 }
 
 @media (width <= 46rem) {
