--- a/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
+++ b/MajstorHUB-Front/src/components/LandingPageComponents/NavBar.module.css
@@ -5,6 +5,7 @@ header {
     position: fixed;
     top: 0;
     z-index: 999;
+    transition: all 0.4s ease;
 }
 
 .register {
@@ -21,6 +22,7 @@ header {
     font-weight: bold;
     height: 77px;
     background-color: white;
+    overflow: hidden;
 }
 
 .dropDown {
@@ -34,10 +36,18 @@ header {
 }
 
 .logo {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: #f57624;
     font-weight: 900;
     text-decoration: none;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    height: 75%;
 }
 
 span {
