--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+/* html, body {
+  overflow-x: hidden;
+} */
+
 :root {
   min-height: 100vh;
   font-family: Roboto, Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -363,6 +367,7 @@ img {
   grid-template-columns: repeat(3, 1fr);
   align-items: center !important;
   column-gap: 1rem !important;
+  text-align: center !important;
 }
 
 .separator::before, .separator::after {
