--- a/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterForm.module.css
@@ -1,5 +1,3 @@
-@import "../../../vars.css";
-
 .searchContainer {
   display: flex;
   flex-wrap: wrap;
@@ -64,6 +62,8 @@
   align-items: center;
   align-content: center;
   margin-right: 1rem;
+
+  min-width: 26rem;
 
   border-radius: 100px;
   border: 2px solid #efded3;
@@ -135,9 +135,14 @@
 }
 
 .categoryContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 310px);
+  /* display: grid;
+  grid-template-columns: repeat(auto-fit, 310px); */
+  
   /* justify-content: center; */
+
+  display: flex;
+
+
   column-gap: 2rem;
 }
 
@@ -200,6 +205,12 @@
 }
 .showButton:active{
   transform: scale(.9);
+}
+
+@media (width < 1200px) {
+  .inputGroup {
+    min-width: 0;
+  }
 }
 
 @media (height < 800px) {
