--- a/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterUser.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterUser.module.css
@@ -1,8 +1,12 @@
-@import '../../../vars.css';
+/* .userCards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+} */
 
-.main {
+/* .userCards > section {
+    border-bottom: 1px solid var(--color-neutral-200);
+} */
 
-}
 .userCards > section:first-child {
     border-top: 0;
 }
