--- a/MajstorHUB-Front/src/components/Theme/Checkbox/Checkbox.module.css
+++ b/MajstorHUB-Front/src/components/Theme/Checkbox/Checkbox.module.css
@@ -14,6 +14,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
 }
 
 /* Hide the browser's default checkbox */
@@ -34,6 +35,7 @@
   width: 25px;
   border: 2px solid #f5aa7a;
   border-radius: 3px;
+  transition: all 0.1s;
   /* background-color: #eee; */
 }
 
@@ -72,7 +74,7 @@
   /* left: 9px;
     top: 5px; */
   left: 7px;
-  top: 3px;
+  top: 2px;
   width: 5px;
   height: 10px;
   border: solid white;
