--- a/MajstorHUB-Front/src/components/Theme/RadioButton/RadioButton.module.css
+++ b/MajstorHUB-Front/src/components/Theme/RadioButton/RadioButton.module.css
@@ -1,5 +1,3 @@
-@import "../../../vars.css";
-
 .opis {
   margin: 0;
 }
@@ -32,7 +30,7 @@
 
 /* Create a custom radio button */
 .checkmark {
-  border: 1px solid var(--color-main-300);
+  border: 2px solid var(--color-main-300);
   position: absolute;
   top: 0;
   left: 0;
@@ -40,6 +38,7 @@
   width: 25px;
   background-color: none;
   border-radius: 50%;
+  transition: all 0.1s;
 }
 
 /* On mouse-over, add a grey background color */
@@ -77,8 +76,8 @@
 
 /* Style the indicator (dot/circle) */
 .container .checkmark:after {
-  top: 8px;
-  left: 8px;
+  top: 7px;
+  left: 7px;
   width: 8px;
   height: 8px;
   border-radius: 50%;
