--- a/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterForm.module.css
@@ -21,6 +21,10 @@
   margin-bottom: 1rem;
 }
 
+.error {
+  border-color: #e5212c !important;
+}
+
 .main {
   display: flex;
   align-items: center;
