--- a/MajstorHUB-Front/src/components/Theme/RadioCard/RadioCard.module.css
+++ b/MajstorHUB-Front/src/components/Theme/RadioCard/RadioCard.module.css
@@ -9,7 +9,8 @@
   gap: 1rem;
   align-items: center;
   margin-top: 0.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
+  /* margin-bottom: 2rem; */
   color: #3a1700;
   transition: all 0.1s ease-in-out;
 }
@@ -69,7 +70,7 @@
 }
 
 .opis {
-    margin-top: 0;
+    margin-top: 2rem;
     display: flex;
     font-size: 0.9rem;
 }
