Postavljanje oglasa na frontu gotovo

--- a/MajstorHUB-Front/src/components/AuthComponents/RegisterComponents/RegisterOptions.module.css
+++ b/MajstorHUB-Front/src/components/AuthComponents/RegisterComponents/RegisterOptions.module.css
@@ -8,7 +8,7 @@
 .mainNaslov {
   margin-bottom: 2rem;
   text-align: center;
-  font-family: Caveat, Roboto, Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Kalam, Roboto, Inter, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .kontinjer {
