--- a/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterForm.module.css
@@ -112,6 +112,7 @@
   resize: vertical;
   transition: border 0.15s ease-in-out;
   line-height: 1.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .form input:hover,
