--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Novac/Novac.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Novac/Novac.module.css
@@ -36,6 +36,11 @@
   gap: 2rem;
 }
 
+.confirm {
+  padding: 2rem;
+  width: 46rem;
+}
+
 @media (width <= 700px) {
   .options {
     flex-direction: column;
