--- a/MajstorHUB-Front/src/components/AuthComponents/RegisterComponents/RegisterForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthComponents/RegisterComponents/RegisterForm.module.css
@@ -40,7 +40,7 @@ hr {
 .form h3 {
     margin-bottom: 1.75rem;
     text-align: center;
-    font-family: Caveat, Roboto, Inter, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Kalam, Roboto, Inter, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .form label {
