--- a/MajstorHUB-Front/src/components/AuthorizedComponents/DashboardComponents/Dashboard.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/DashboardComponents/Dashboard.module.css
@@ -1,3 +1,22 @@
+.firstBlock {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 0;
+}
+.firstBlock h3 {
+    margin: 0;
+}
+.firstBlock button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: .5rem;
+}
+.firstBlock a {
+    text-decoration: none;
+}
+
 .main {
     display: grid;
     grid-template-columns: 2fr 1fr;
