--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/EditUserForms/EditUserForm.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/EditUserForms/EditUserForm.module.css
@@ -70,6 +70,7 @@
   resize: vertical;
   transition: border 0.15s ease-in-out;
   line-height: 1.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .form label:nth-child(3) {
@@ -229,6 +230,10 @@
   justify-content: center;
   align-items: center;
   column-gap: 0.25rem;
+  cursor: pointer;
+}
+.vestina:hover {
+  background-color: var(--color-main-200);
 }
 .vestina button {
   display: flex;
