--- a/MajstorHUB-Front/src/index.css
+++ b/MajstorHUB-Front/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lugrasimo&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lugrasimo&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 @import '/src/vars.css';
 
 * {
@@ -78,10 +79,7 @@ img {
 .mainButton,
 .mainButtonSmall {
   background-color: #f57624;
-  /* color: #efded3; */
   color: white;
-  border: none;
-  /* border-radius: 10px; */
   border-radius: 100px;
   font-weight: bold;
   cursor: pointer;
@@ -90,6 +88,7 @@ img {
   font-family: inherit;
   font-size: inherit;
   text-align: center;
+  border: none;
 }
 
 .mainButton {
@@ -161,10 +160,10 @@ img {
   cursor: not-allowed;
 }
 
-.secondaryButton {
+.secondaryButton,
+.secondaryButtonSmall {
   background-color: transparent;
   color: #f57624;
-  padding: 0.9rem 1.75rem;
   border: 2px solid #f57624;
   /* border-radius: 10px; */
   border-radius: 100px;
@@ -173,16 +172,26 @@ img {
   font-size: inherit;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
-  text-transform: uppercase;
   text-decoration: none;
 }
 
-.secondaryButton:hover {
+.secondaryButton {
+  padding: 0.9rem 1.75rem;
+  text-transform: uppercase;
+}
+
+.secondaryButtonSmall {
+  padding: 0.575rem 1.65rem;
+}
+
+.secondaryButton:hover,
+.secondaryButtonSmall:hover {
   background-color: #f57624;
   color: white;
 }
 
-.secondaryButton:active {
+.secondaryButton:active,
+.secondaryButtonSmall:active {
   background-color: #8a3a06;
   border-color: #8a3a06;
 }
