--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/PostaviOglas/PostaviOglas.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/PostaviOglas/PostaviOglas.module.css
@@ -180,4 +180,7 @@
     display: flex;
     flex-direction: column;
   }
+  .bottomContainer > div:nth-child(2) {
+    padding-inline: 1rem;
+  }
 }
