--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/Pregled/PregledOglasa.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/Pregled/PregledOglasa.module.css
@@ -1,5 +1,5 @@
 .main {
-
+    padding-bottom: 110px;
 }
 
 .main section {
@@ -65,6 +65,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: white;
 
     border-bottom: 1px solid var(--color-neutral-200) !important;
     border-bottom-left-radius: 1rem;
@@ -79,5 +80,16 @@
     .main section {
         border-radius: 0;
         border-inline: 0;
+    }
+
+    .heading {
+        display: none;
+    }
+
+    .btnContainer {
+        position: fixed;
+        width: 100vw;
+        bottom: 0;
+        left: 0;
     }
 }
