Filter oglasa gotov
Treba prikazati i neke informacije o korisniku koji postavlja oglas

--- a/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthSidebar.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/AuthNavBarComponents/AuthSidebar.module.css
@@ -1,3 +1,7 @@
+.nav {
+    display: block;
+}
+
 .userInfo {
     display: flex;
     flex-direction: row;
@@ -77,8 +81,8 @@
     margin: 0;
 }
 
-@media (width <= 1000) {
+/* @media (width >= 1000) {
     .nav {
-        display: block !important;
+        display: none !important;
     }
-}
+} */
