--- a/MajstorHUB-Front/src/components/Theme/DropDown/DropDown.module.css
+++ b/MajstorHUB-Front/src/components/Theme/DropDown/DropDown.module.css
@@ -42,7 +42,7 @@
   margin: 0;
 
   /* Allow the list items to expand independently */
-  width: max-content;
+  width: fit-content;
   min-width: 100%; /* Ensure the list is at least as wide as the parent */
   white-space: nowrap; /* Prevent line breaks */
   overflow: hidden; /* Hide overflowing content */
@@ -68,4 +68,36 @@
   cursor: default;
   padding-inline: 1rem;
   margin-top: 1rem;
+}
+
+.error {
+  border: 1px solid var(--color-red-500) !important;
+  /* animation: 0.2s shake ease-out; */
+}
+
+.radioError label span {
+  border-color: var(--color-red-500) !important;
+  background-color: var(--color-red-500) !important;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0px);
+  }
+
+  25% {
+    transform: translateX(-15px);
+  }
+
+  50% {
+    transform: translateX(15px);
+  }
+
+  75% {
+    transform: translateX(-15px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
 }
