--- a/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterUser.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/FilterUser.module.css
@@ -7,21 +7,34 @@
     border-bottom: 1px solid var(--color-neutral-200);
 } */
 
-.userCards > section:first-child {
+/* .userCards > section:first-child {
     border-top: 0;
-}
+} */
 .main hr {
     color: var(--color-neutral-200);
     margin: 2rem 0;;
 }
 
 .center {
-    margin-top: 4rem;
-    height: 500px;
+    border-top: 1px solid var(--color-neutral-200);
+    height: 600px;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: borderColor 0.5s infinite;
+}
+
+@keyframes borderColor {
+    0% {
+        border-top-color: var(--color-neutral-200);
+    }
+    50% {
+        border-top-color: var(--color-main-500);
+    }
+    100% {
+        border-top-color: var(--color-neutral-200);
+    }
 }
 
 .notFoundCont {
