--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/Filter/OglasCard.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/Filter/OglasCard.module.css
@@ -27,20 +27,13 @@
 }
 
 .firstRow {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: 1rem; */
 }
 .firstRow p,
 .firstRow h4 {
     margin: 0.5rem 0;
-}
-.firstRow p:first-child {
-    font-weight: bold;
-}
-.firstRow > img {
-    border-radius: 50%;
-    width: 4rem;
 }
 
 .iconContainer {
@@ -58,31 +51,19 @@
     font-weight: 400;
 }
 
+.thirdRow p  {
+    color: var(--color-neutral-500);
+    font-weight: 400;
+}
+
 .opisRow p {
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: 1.5;
-    max-height: 3em;
-}
-
-.iskustvoRow {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.3rem;
-    border-radius: 8px;
-    color: var(--color-main-800);
-    /* background-color: var(--color-main-200); */
-    border: 1px solid var(--color-main-800);
-    column-gap: 0.3rem;
-    /* transition: all 0.1s ease-in-out; */
-}
-.iskustvoRow p {
-    font-weight: bold;
-    margin: 0;
+    max-height: 6em;
 }
 
 .strukeRow {
@@ -101,4 +82,12 @@
     border-radius: 100px;
     padding: 0.6rem;
     /* transition: all 0.1s ease-in-out; */
+}
+
+.lastRow {
+    color: var(--color-neutral-500);
+}
+.lastRow span {
+    display: inline-block;
+    font-weight: bold;
 }
