--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/PostaviOglas/PostaviOglas.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/PostaviOglas/PostaviOglas.module.css
@@ -180,7 +180,13 @@
     display: flex;
     flex-direction: column;
   }
+  .bottomContainer {
+    padding: 1rem 1rem;
+  }
   .bottomContainer > div:nth-child(2) {
-    padding-inline: 1rem;
+    padding-inline: 0;
+    display: grid;
+    grid-template-columns: .8fr 1fr;
+    column-gap: 1rem;
   }
 }
