--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/ProfileData.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/ProfileData.module.css
@@ -135,6 +135,11 @@
     display: inline-block;
 }
 
+.headingWithInfo {
+    display: flex;
+    gap: 0.2rem;
+}
+
 .textWithInfo {
     display: flex;
     gap: 0.2rem;
