--- a/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/UserCard.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/FilterUsers/UserCard.module.css
@@ -9,7 +9,7 @@
     .strukeRow div {
         border-color: var(--color-main-700);
     }
-    .iskustvoRow {
+    .iskustvoRow > div {
         background-color: var(--color-main-200);
     }
 }
@@ -67,24 +67,6 @@
     line-height: 1.5;
     max-height: 3em;
 }
-
-.iskustvoRow {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.3rem;
-    border-radius: 8px;
-    color: var(--color-main-800);
-    /* background-color: var(--color-main-200); */
-    border: 1px solid var(--color-main-800);
-    column-gap: 0.3rem;
-    /* transition: all 0.1s ease-in-out; */
-}
-.iskustvoRow p {
-    font-weight: bold;
-    margin: 0;
-}
-
 .strukeRow {
     margin-top: 1rem;
     display: flex;
