--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/Prikaz/Prikaz.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Oglas/Prikaz/Prikaz.module.css
@@ -15,6 +15,53 @@
     padding-inline: 2rem;
 }
 
+.authorNavCont {
+    display: flex;
+    flex-direction: column;
+    padding: 0 2rem;
+}
+.authorNavCont h3 {
+    margin: 2rem 0;
+}
+.authorNav {
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center; */
+
+    /* outline: 1px solid var(--color-neutral-200); */
+    display: flex;
+}
+.authorNav div {
+    /* width: 25%; */
+    width: 300px;
+    text-align: center;
+    background-color: white;
+
+    border: 2px solid var(--color-neutral-200);
+    color: var(--color-neutral-500);
+
+    padding: 1rem 0;
+    cursor: pointer;
+}
+.authorNav div:first-child {
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    /* border-right: none; */
+}
+.authorNav div:last-child {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+.authorNav div:hover {
+    border-color: var(--color-main-500);
+    color: var(--color-main-500);
+}
+.authorNav div.active {
+    background-color: var(--color-main-500);
+    color: white;
+    border-color: var(--color-main-500);
+}
+
 @media (width <= 600px) {
     .main > div {
         padding-inline: 0 !important;
@@ -24,4 +71,5 @@
     .main section {
         border-inline: 0;
     }
+
 }
