--- a/MajstorHUB-Front/src/components/AuthorizedComponents/Prijava/PrijaveNaOglasu/PrijavaWithIzvCard.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/Prijava/PrijaveNaOglasu/PrijavaWithIzvCard.module.css
@@ -28,7 +28,7 @@
     display: inline-block;
 }
 .gray {
-    color: var(--color-neutral-400);
+    color: var(--color-neutral-500);
 }
 
 .leftSection {
@@ -68,6 +68,20 @@
 .firstRow > div {
     display: flex;
     column-gap: 1rem;
+    row-gap: .5rem;
+    flex-direction: column;
+}
+
+.small {
+    margin: 0;
+    color: var(--color-neutral-500);
+    font-size: .9rem;
+}
+
+.nazivBoostedContainer {
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
 }
 
 .iconContainer,
@@ -84,6 +98,9 @@
     color: var(--color-blue-500);
     border: 1px solid var(--color-blue-300);
     border-radius: 5px;
+
+    height: 27px;
+    width: 115px;
 }
 
 .firstRow h4 {
@@ -101,12 +118,13 @@
     align-items: center;
     column-gap: .3rem;
     font-weight: 300;
+    color: var(--color-neutral-500);
 }
 
 .thirdRow {
     display: flex;
     align-items: center;
-    column-gap: 2rem;
+    column-gap: 1.5rem;
     row-gap: .5rem;
     flex-wrap: wrap;
     margin: 1.5rem 0;
@@ -114,6 +132,7 @@
 .thirdRow p {
     font-weight: 300;
     margin: 0;
+    color: var(--color-neutral-500);
 }
 
 .iskustvoRow {
@@ -131,20 +150,25 @@
     max-height: 6em;
 } */
 
+.opisRow {
+    margin-top: 1.5rem;
+}
+
 .strukeRow {
     margin-top: 1.5rem;
 }
 .strukeRow p {
     margin-bottom: .5rem;
     font-weight: 300;
+    color: var(--color-neutral-500);
 }
 
 .lastRow {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
 }
 .lastRow p {
     margin: .5rem 0;
-    color: var(--color-neutral-400);
+    color: var(--color-neutral-500);
 }
 
 .absoluteButtons {
@@ -164,7 +188,6 @@
 
 .contactRow {
     margin: 1rem 0;
-    margin-top: 2rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -175,6 +198,7 @@
     display: flex;
     align-items: center;
     column-gap: .3rem;
+    font-weight: 300;
 }
 
 @media (width <= 900px) {
