--- a/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/UserProfile.module.css
+++ b/MajstorHUB-Front/src/components/AuthorizedComponents/UsersProfiles/UserProfile.module.css
@@ -1,4 +1,5 @@
-.center {
+.center,
+.centerMaxC {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +7,13 @@
 
     border: 1px solid var(--color-neutral-200);
     border-radius: 1rem;
-    height: calc(100vh - 77px);
+}
+.center {
+    height: calc(100vh + 77px);
+}
+.centerMaxC {
+    height: max-content;
+    padding: 2rem 0;
 }
 .center img {
     max-width: 600px;
